--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,15 +4,55 @@ output:
   html_document:
     keep_md: true
 ---
-
-
+## Install Libraries
+```{r, message=FALSE}
+library(dplyr)
+library(ggplot2)
+```
 ## Loading and preprocessing the data
-
-
+Download and read files
+```{r read}
+activity <- read.csv(unz("activity.zip", "activity.csv"), colClasses = c("integer","character","integer"))
+activity$date <- as.Date(activity$date, "%Y-%m-%d")
+activity <- tbl_df(activity)
+```
 
 ## What is mean total number of steps taken per day?
+Summarize the activity table by total steps per day.
+```{r}
+day <- group_by(activity,date)
+daytotals <- summarize(day,steps = sum(steps, na.rm = TRUE))
+```
+Calculate mean and median.
+```{r}
+mean <- mean(daytotals$steps)
+median <- median(daytotals$steps)
+```
+Plot histogram with a vertical line showing the median and mean.
+```{r histogram, fig.height=6,fig.width=10}
+ggplot(daytotals, aes(x = steps)) +
+        geom_histogram(bins = 30) +
+        geom_vline(xintercept = mean, color = "red") +
+        geom_text(aes(
+                x = mean - 2000,
+                y = 10,
+                label = paste("mean =", round(mean, 0))
+                
+        ), color = "red") +
+        geom_text(aes(
+                x = median + 2000,
+                y = 10,
+                label = paste("median =", round(median, 0))
+                
+        ), color = "blue") +
+        geom_vline(xintercept = median, color = "blue") +
+        xlab("Total Daily Steps") +
+        ylab("Number of Days") +
+        ggtitle("Distribution of Total Daily Steps") +
+        theme(plot.title = element_text(hjust = 0.5))
+```
 
-
+The mean and median number of steps per day are `r round(mean,0)` and `r median` respectively.
 
 ## What is the average daily activity pattern?
 
