--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -78,17 +78,20 @@ ggplot(times, aes(x=interval, y=steps)) +
 ## Imputing missing values
 There are `r sum(is.na(activity$steps))` missing values.
 
-Replace missing values in **activity** with mean from the **times** table.
-```{r missing}
-for (i in 1:nrow(activity)) {
-        if (is.na(activity[i, 1]) == TRUE)
+Define a new instance of the **activty** table called **imputed**.
+Replace missing values in **imputed** with mean from the **times** table.
+```{r impute}
+imputed <- read.csv(unz("activity.zip", "activity.csv"),
+                    colClasses = c("double", "character", "double"))
+for (i in 1:nrow(imputed)) {
+        if (is.na(imputed[i, 1]) == TRUE)
         {
-                activity[i, 1] <- times[match(activity[i, 3], times$interval), 2]
+                imputed[i, 1] <- times[match(imputed[i, 3], times$interval), 2]
         }
 }
 ```
 Check that there are now no missing values.
 ```{r}
-summary(activity)
+summary(imputed)
 ```
 ## Are there differences in activity patterns between weekdays and weekends?
